[gd_scene load_steps=10 format=2]

[ext_resource path="res://World.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://resources/Resources/nova_mono.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/Resources/jura.tres" type="DynamicFont" id=4]
[ext_resource path="res://LabelledValue.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/Resources/jura_bold.tres" type="DynamicFont" id=7]
[ext_resource path="res://resources/Resources/jura_semi.tres" type="DynamicFont" id=8]
[ext_resource path="res://resources/Resources/jura_light.tres" type="DynamicFont" id=9]
[ext_resource path="res://resources/Resources/default_theme.tres" type="Theme" id=10]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Fader" type="Tween" parent="."]

[node name="World" parent="." instance=ExtResource( 1 )]
z_index = -5
world_depth = 2
upper_panel_path = NodePath("../View/Panel/Split/UpperPanel")
lower_panel_path = NodePath("../View/Panel/Split/LowerPanel")
player_status_path = NodePath("../View/Panel/Split/UpperPanel/Status/Status")
rogue_status_path = NodePath("../View/Panel/Split/LowerPanel/Scan/Scan")
log_path = NodePath("../View/Log/Info")

[node name="Frame" type="Node2D" parent="."]

[node name="ColorRectBottom" type="ColorRect" parent="Frame"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 2976.0
margin_right = 3072.0
margin_bottom = 3072.0
color = Color( 0.0235294, 0.0627451, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectTop" type="ColorRect" parent="Frame"]
margin_right = 3072.0
margin_bottom = 96.0
color = Color( 0.0235294, 0.0627451, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectLeft" type="ColorRect" parent="Frame"]
margin_right = 96.0
margin_bottom = 3072.0
color = Color( 0.0235294, 0.0627451, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectRight" type="ColorRect" parent="Frame"]
margin_left = 2976.0
margin_right = 3072.0
margin_bottom = 3072.0
color = Color( 0.0235294, 0.0627451, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View" type="Node2D" parent="."]
position = Vector2( 960, 540 )
z_index = 3

[node name="Panel" type="PanelContainer" parent="View"]
margin_left = -960.0
margin_top = -540.0
margin_right = -588.0
margin_bottom = 540.0
theme = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Split" type="VSplitContainer" parent="View/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 365.0
margin_bottom = 1073.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpperPanel" type="TabContainer" parent="View/Panel/Split"]
margin_right = 358.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Menu" type="VBoxContainer" parent="View/Panel/Split/UpperPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Seed" parent="View/Panel/Split/UpperPanel/Menu" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 350.0
margin_bottom = 20.0
label = "Game:"

[node name="CenterContainer4" type="CenterContainer" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 24.0
margin_right = 350.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Weapon" type="MenuButton" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 60.0
margin_right = 350.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Weapon"
flat = false

[node name="Overview" type="Button" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 97.0
margin_right = 350.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
text = "Overview"

[node name="Fullscreen" type="Button" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 134.0
margin_right = 350.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
pressed = true
text = "Fullscreen"

[node name="Game Stats" type="Button" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 171.0
margin_right = 350.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Game Stats"

[node name="CenterContainer" type="CenterContainer" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 208.0
margin_right = 350.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Save" type="Button" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 245.0
margin_right = 350.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"

[node name="Restart" type="Button" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 282.0
margin_right = 350.0
margin_bottom = 315.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restart"

[node name="Quit" type="Button" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 319.0
margin_right = 350.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="CenterContainer2" type="CenterContainer" parent="View/Panel/Split/UpperPanel/Menu"]
margin_top = 356.0
margin_right = 350.0
margin_bottom = 389.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Status" type="ScrollContainer" parent="View/Panel/Split/UpperPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Status" type="VBoxContainer" parent="View/Panel/Split/UpperPanel/Status"]
margin_right = 350.0
margin_bottom = 389.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Turn" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 350.0
margin_bottom = 20.0
label = "Turn:"

[node name="Moves" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 24.0
margin_right = 350.0
margin_bottom = 44.0
label = "Moves left:"

[node name="weapons" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 48.0
margin_right = 350.0
margin_bottom = 68.0
label = "Weapon:"

[node name="power" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 72.0
margin_right = 350.0
margin_bottom = 92.0
label = "Power:"

[node name="logic" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 96.0
margin_right = 350.0
margin_bottom = 116.0
label = "Logic:"

[node name="chassis" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 120.0
margin_right = 350.0
margin_bottom = 140.0
label = "Chassis:"

[node name="drive" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 144.0
margin_right = 350.0
margin_bottom = 164.0
label = "Drive:"

[node name="armour" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 168.0
margin_right = 350.0
margin_bottom = 188.0
label = "Armour:"

[node name="protection" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 192.0
margin_right = 350.0
margin_bottom = 212.0
label = "Protection:"

[node name="strength" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 216.0
margin_right = 350.0
margin_bottom = 236.0
label = "Strength:"

[node name="speed" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
margin_top = 240.0
margin_right = 350.0
margin_bottom = 260.0
label = "Speed:"

[node name="extras" parent="View/Panel/Split/UpperPanel/Status/Status" instance=ExtResource( 5 )]
visible = false
label = "Equipment:"

[node name="Controls" type="VBoxContainer" parent="View/Panel/Split/UpperPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelledValue7" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 338.0
margin_bottom = 23.0
label = "Move"
default = "H, J, K, L"

[node name="LabelledValue13" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 338.0
margin_bottom = 23.0
label = "Fire"
default = "shift + H, J, K, L"

[node name="LabelledValue8" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 338.0
margin_bottom = 23.0
label = "Select weapon"
default = "Z, X"

[node name="LabelledValue12" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 338.0
margin_bottom = 23.0
label = "Rest"
default = "space"

[node name="LabelledValue6" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 338.0
margin_bottom = 23.0
label = "Move cursor"
default = "W, A, S, D"

[node name="LabelledValue2" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 27.0
margin_right = 338.0
margin_bottom = 50.0
label = "Action at cursor"
default = "enter"

[node name="LabelledValue10" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 27.0
margin_right = 338.0
margin_bottom = 50.0
label = "Info at cursor"
default = "esc"

[node name="LabelledValue11" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 27.0
margin_right = 338.0
margin_bottom = 50.0
label = "Reset cursor"
default = "backspace"

[node name="LabelledValue" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 338.0
margin_bottom = 23.0
label = "Move view"
default = "arrow keys"

[node name="LabelledValue14" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 338.0
margin_bottom = 23.0
label = "Toggle overview"
default = "tab"

[node name="LabelledValue9" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 27.0
margin_right = 338.0
margin_bottom = 50.0
label = "Reset view"
default = "delete"

[node name="LabelledValue3" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 54.0
margin_right = 338.0
margin_bottom = 77.0
label = "Save:"
default = "^S"

[node name="LabelledValue4" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 81.0
margin_right = 338.0
margin_bottom = 104.0
label = "Restart:"
default = "^R"

[node name="LabelledValue5" parent="View/Panel/Split/UpperPanel/Controls" instance=ExtResource( 5 )]
margin_top = 108.0
margin_right = 338.0
margin_bottom = 131.0
label = "Quit:"
default = "^Q"

[node name="LowerPanel" type="TabContainer" parent="View/Panel/Split"]
margin_top = 443.0
margin_right = 358.0
margin_bottom = 1066.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Info" type="RichTextLabel" parent="View/Panel/Split/LowerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = false
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 8 )
custom_fonts/italics_font = ExtResource( 9 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Shut down the [b]rogue[/b] robots on all [b]7[/b] levels of the mining complex and return to the surface to allow the automated systems to reboot safely.

Robots are deactivated if power, logic or chassis falls to 0, or they are grappled into submission.

Deactivated robots can be scavenged for upgrades.

Reset all the access points on a level to unlock downward lifts.
"
text = "Shut down the rogue robots on all 7 levels of the mining complex and return to the surface to allow the automated systems to reboot safely.

Robots are deactivated if power, logic or chassis falls to 0, or they are grappled into submission.

Deactivated robots can be scavenged for upgrades.

Reset all the access points on a level to unlock downward lifts.
"
scroll_following = true
selection_enabled = true

[node name="Scan" type="ScrollContainer" parent="View/Panel/Split/LowerPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Scan" type="VBoxContainer" parent="View/Panel/Split/LowerPanel/Scan"]
margin_right = 350.0
margin_bottom = 581.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Type" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
margin_bottom = 715.0
size_flags_horizontal = 1
label = "Type:"

[node name="weapons" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
margin_bottom = 712.0
label = "Weapon:"

[node name="power" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
label = "Power:"

[node name="logic" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
label = "Logic:"

[node name="chassis" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
label = "Chassis:"

[node name="drive" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
label = "Drive:"

[node name="armour" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
label = "Armour:"

[node name="protection" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
label = "Protection:"

[node name="strength" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
label = "Strength:"

[node name="speed" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
label = "Speed:"

[node name="extras" parent="View/Panel/Split/LowerPanel/Scan/Scan" instance=ExtResource( 5 )]
visible = false
label = "Equipment:"

[node name="About" type="RichTextLabel" parent="View/Panel/Split/LowerPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = false
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 8 )
custom_fonts/italics_font = ExtResource( 9 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[b][i]Shut down the [/i]rogue[i] robots on all [/i]7[i] levels of the mining complex and return to the surface to allow the automated systems to reboot safely.

Robots are deactivated if power, logic or chassis falls to 0, or they are grappled into submission.

Deactivated robots can be scavenged for upgrades.

Reset all the access points on a level to unlock downward lifts.[/i][/b]"
text = "Shut down the rogue robots on all 7 levels of the mining complex and return to the surface to allow the automated systems to reboot safely.

Robots are deactivated if power, logic or chassis falls to 0, or they are grappled into submission.

Deactivated robots can be scavenged for upgrades.

Reset all the access points on a level to unlock downward lifts."
fit_content_height = true
selection_enabled = true

[node name="Log" type="PanelContainer" parent="View"]
margin_left = 588.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="RichTextLabel" parent="View/Log"]
margin_left = 7.0
margin_top = 7.0
margin_right = 365.0
margin_bottom = 1073.0
rect_clip_content = false
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 8 )
custom_fonts/italics_font = ExtResource( 9 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="ColorRectBottom" type="ColorRect" parent="View"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -960.0
margin_top = 538.0
margin_right = 960.0
margin_bottom = 550.0
color = Color( 0.243137, 0.635294, 0.635294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectTop" type="ColorRect" parent="View"]
margin_left = -960.0
margin_top = -550.0
margin_right = 960.0
margin_bottom = -538.0
color = Color( 0.243137, 0.635294, 0.635294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectLeft" type="ColorRect" parent="View"]
margin_left = -970.0
margin_top = -540.0
margin_right = -958.0
margin_bottom = 540.0
color = Color( 0.243137, 0.635294, 0.635294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectRight" type="ColorRect" parent="View"]
margin_left = 958.0
margin_top = -540.0
margin_right = 970.0
margin_bottom = 540.0
color = Color( 0.243137, 0.635294, 0.635294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectMidRight" type="ColorRect" parent="View"]
margin_left = 588.0
margin_top = -540.0
margin_right = 590.0
margin_bottom = 540.0
color = Color( 0.243137, 0.635294, 0.635294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectMidLeft" type="ColorRect" parent="View"]
margin_left = -588.0
margin_top = -540.0
margin_right = -586.0
margin_bottom = 540.0
color = Color( 0.243137, 0.635294, 0.635294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="View"]
current = true

[node name="Dialogs" type="Control" parent="."]
theme = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="PopupDialog" parent="Dialogs"]
margin_right = 280.0
margin_bottom = 320.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogs/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Dialogs/Start/VBoxContainer"]
margin_right = 232.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer1" type="VBoxContainer" parent="Dialogs/Start/VBoxContainer/MarginContainer"]
margin_right = 232.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Dialogs/Start/VBoxContainer/MarginContainer/VBoxContainer1"]
margin_right = 232.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="CenterContainer3" type="CenterContainer" parent="Dialogs/Start/VBoxContainer/MarginContainer/VBoxContainer1/HBoxContainer"]
margin_right = 114.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dialogs/Start/VBoxContainer/MarginContainer/VBoxContainer1/HBoxContainer/CenterContainer3"]
margin_left = 2.0
margin_top = 3.0
margin_right = 112.0
margin_bottom = 23.0
text = "Saved games:"

[node name="SavedGames" type="OptionButton" parent="Dialogs/Start/VBoxContainer/MarginContainer/VBoxContainer1/HBoxContainer"]
margin_left = 118.0
margin_right = 232.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="Dialogs/Start/VBoxContainer/MarginContainer/VBoxContainer1"]
margin_top = 30.0
margin_right = 232.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Dialogs/Start/VBoxContainer/MarginContainer/VBoxContainer1/CenterContainer"]
margin_left = 67.0
margin_top = 13.0
margin_right = 165.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="MarginContainer3" type="MarginContainer" parent="Dialogs/Start/VBoxContainer"]
margin_top = 92.0
margin_right = 232.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="V2BoxContainer" type="VBoxContainer" parent="Dialogs/Start/VBoxContainer/MarginContainer3"]
margin_right = 232.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Dialogs/Start/VBoxContainer/MarginContainer3/V2BoxContainer"]
margin_right = 232.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="CenterContainer3" type="CenterContainer" parent="Dialogs/Start/VBoxContainer/MarginContainer3/V2BoxContainer/HBoxContainer"]
margin_right = 123.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomButton" type="Button" parent="Dialogs/Start/VBoxContainer/MarginContainer3/V2BoxContainer/HBoxContainer/CenterContainer3"]
margin_right = 144.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Random Seed"

[node name="Seed" type="LineEdit" parent="Dialogs/Start/VBoxContainer/MarginContainer3/V2BoxContainer/HBoxContainer"]
margin_left = 127.0
margin_right = 232.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "seed"

[node name="CenterContainer2" type="CenterContainer" parent="Dialogs/Start/VBoxContainer/MarginContainer3/V2BoxContainer"]
margin_top = 34.0
margin_right = 232.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="Dialogs/Start/VBoxContainer/MarginContainer3/V2BoxContainer/CenterContainer2"]
margin_left = 38.0
margin_top = 11.0
margin_right = 193.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "New from Seed"

[node name="MarginContainer2" type="MarginContainer" parent="Dialogs/Start/VBoxContainer"]
margin_top = 184.0
margin_right = 232.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Dialogs/Start/VBoxContainer/MarginContainer2"]
margin_top = 34.0
margin_right = 232.0
margin_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="Dialogs/Start/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 65.0
margin_bottom = 20.0
text = "Depth: 2"

[node name="Depth" type="HSlider" parent="Dialogs/Start/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 69.0
margin_top = 2.0
margin_right = 220.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 2.0
max_value = 7.0
value = 7.0

[node name="Label2" type="Label" parent="Dialogs/Start/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 224.0
margin_right = 232.0
margin_bottom = 20.0
text = "7"

[node name="Quit" type="ConfirmationDialog" parent="Dialogs"]
margin_right = 200.0
margin_bottom = 92.0
popup_exclusive = true
window_title = "Quit?"
dialog_text = "Are you sure you want to quit? (Game will not be saved at this point.)"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="AcceptDialog" parent="Dialogs"]
margin_right = 103.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "Success!"
dialog_autowrap = true

[node name="Lose" type="AcceptDialog" parent="Dialogs"]
margin_right = 148.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "You have failed!"
dialog_autowrap = true
[connection signal="about_to_show" from="View/Panel/Split/UpperPanel/Menu/Weapon" to="World" method="_on_Weapon_about_to_show" flags=3]
[connection signal="toggled" from="View/Panel/Split/UpperPanel/Menu/Overview" to="." method="set_zoom"]
[connection signal="toggled" from="View/Panel/Split/UpperPanel/Menu/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="View/Panel/Split/UpperPanel/Menu/Game Stats" to="." method="_on_Game_Stats_pressed"]
[connection signal="pressed" from="View/Panel/Split/UpperPanel/Menu/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="View/Panel/Split/UpperPanel/Menu/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="View/Panel/Split/UpperPanel/Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Dialogs/Start/VBoxContainer/MarginContainer/VBoxContainer1/CenterContainer/ResumeButton" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Dialogs/Start/VBoxContainer/MarginContainer3/V2BoxContainer/HBoxContainer/CenterContainer3/RandomButton" to="." method="_on_Random_pressed"]
[connection signal="text_changed" from="Dialogs/Start/VBoxContainer/MarginContainer3/V2BoxContainer/HBoxContainer/Seed" to="." method="_on_Seed_text_changed"]
[connection signal="pressed" from="Dialogs/Start/VBoxContainer/MarginContainer3/V2BoxContainer/CenterContainer2/NewButton" to="." method="_on_New_pressed"]
[connection signal="confirmed" from="Dialogs/Quit" to="." method="_on_Quit_confirmed"]
[connection signal="popup_hide" from="Dialogs/Quit" to="." method="_on_Quit_popup_hide"]
[connection signal="confirmed" from="Dialogs/Win" to="." method="_on_game_over" binds= [ true ]]
[connection signal="confirmed" from="Dialogs/Lose" to="." method="_on_game_over" binds= [ false ]]
